# neural-for-usd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ROADMAP.md  SOURCES.md  ez_build.sh  ez_run.sh  japanesePlaneToy.usda  log.txt  requirements.txt
src/: CMakeLists.txt  positional_encoder.py
src/base/: CMakeLists.txt  camera.cpp  camera.h  camerapose.h  engine.h  framemetadata.cpp  framemetadata.h  freecamera.cpp  freecamera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycamera.cpp  mycamera.h  myframerecorder.cpp  myframerecorder.h  mygl.cpp  mygl.h  renderengine.cpp  renderengine.h  stage.cpp  stage.h  stagemanager.cpp  stagemanager.h  style.qss  usdgl.cpp  usdgl.h
src/hdui/: CMakeLists.txt  main.cpp  sceneObserver.cpp
src/helloWorld/: CMakeLists.txt  SceneDelegate.cpp  SceneDelegate.h  main.cpp
src/nerf/: CMakeLists.txt  convert_json_to_npz.py  encoder.py  eval_nerf.py  forward.py  helpers.py  imports.py  main.cpp  main.py  mlp.py  nerf-fine.pt  nerf.pt  nerf.py  positional_encoder.py  renderer.py  requirements.txt  resize_data.py  sample.py  train_nerf.py  trainer.py  visualizer.py  volumizer.py
src/usdSimple/: CMakeLists.txt  camera.cpp  camera.h  camerapose.cpp  glm_utils.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  scene.cpp
src/viewer/: CMakeLists.txt  engine.cpp  engine.h  framebuffer.cpp  framebuffer.h  main.cpp  myengine.cpp  myengine.h  openglcontext.cpp  openglcontext.h  scene.cpp  scene.cpp.txt  scene.h  scene.h.txt  usdgl.cpp  usdgl.h  usdwindow.cpp  (+3 more)
(+77 files in other folders)
